# sentence-analyzer

./: .env.example  .gitignore  README.md  start.sh  英语长难句解析系统_开发计划书.md
backend/: database.py  gemini_client.py  main.py  output_formatter.py  prompt_engine.py  pyproject.toml  utils.py
backend/prompts/: few_shots.j2  system_prompt.j2  system_prompt_article.j2  task_article.j2  task_compact.j2  task_paragraph.j2  task_standard.j2
frontend/: package-lock.json  package.json  test_md.js  vite.config.js
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: HistoryPanel.vue  InputPanel.vue  OutputPanel.vue  SpokenFeedback.vue  TabsRenderer.vue
frontend/src/stores/: analyzer.js
frontend/src/utils/: markdown-renderer.js
