[tool.poetry]
package-mode = false
name = "sentence-analyzer-backend"
version = "1.0.0"
description = "Backend for English Long and Difficult Sentences Parsing System"
authors = ["Dev <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
google-generativeai = "^0.7.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
sqlalchemy = "^2.0.0"
aiosqlite = "^0.20.0"
alembic = "^1.13.0"
jinja2 = "^3.1.0"
python-dotenv = "^1.0.0"
langdetect = "^1.0.9"
sse-starlette = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
